verification tests change
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-min/Jenkinsfile
+++ b/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-min/Jenkinsfile
@@ -171,7 +171,7 @@ pipeline {
     }
     post {
         always {
-            archiveAllArtifacts("deploy/vars.tfvars" "deploy/logs.tar.gz", "deploy/verification.log")
+            archiveAllArtifacts("deploy/vars.tfvars", "deploy/logs.tar.gz", "deploy/verification.log")
             cleanupOcp4Cluster()
             checkInfraError()
             processE2eResults()
