Test ppc64le tags
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-smoke/Jenkinsfile
+++ b/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-smoke/Jenkinsfile
@@ -161,7 +161,7 @@ pipeline {
     }
     post {
         always {
-	    archiveAllArtifacts("deploy/vars.tfvars", "deploy/verification.log", "deploy/test-result.html",
+	    archiveAllArtifacts("deploy/vars.tfvars", "deploy/verification.log", "deploy/verification-tests-report.html",
                 "cpu-pre.pprof", "heap-pre.pprof", "prometheus.tar.gz")
             cleanupOcp4Cluster()
             checkInfraError()
