Test ppc64le tags
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-smoke/Jenkinsfile
+++ b/jobs/pipelines/powervs/ocp-4.12/daily-ocp4.12-powervs-script-sydney05-p9-smoke/Jenkinsfile
@@ -53,6 +53,9 @@ pipeline {
             steps {
                 setupCommonEnvironmentVariables()
                 setupClusterConfig("${CONFIG_TYPE}")
+		script {
+                    env.INSTALL_PLAYBOOK_TAG = "99d0af666cb0b88282256cfa159e452f9fdde3ae"
+                }
             }
         }
         stage('pull artifact') {
