Enable jenkins pipeline for UI e2e for ocp 4.10
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
+++ b/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
@@ -98,7 +98,7 @@ pipeline {
                             throw err
                         }
 			if (fileExists("deploy/artifactory/rhcos-${OCP_RELEASE}-powercloud-latest.txt")) {
-+                           env.RHCOS_IMAGE = readFile "deploy/artifactory/rhcos-${OCP_RELEASE}-powercloud-latest.txt"
+                            env.RHCOS_IMAGE = readFile "deploy/artifactory/rhcos-${OCP_RELEASE}-powercloud-latest.txt"
                             env.RHCOS_IMAGE_NAME = env.RHCOS_IMAGE.split()[0].trim()
                             env.RHCOS_IMAGE_ID = env.RHCOS_IMAGE.split()[1].trim()
                         }
@@ -107,7 +107,7 @@ pipeline {
                             throw err
                         }
 			if (fileExists("deploy/artifactory/rhel-${REDHAT_RELEASE}-powercloud-latest.txt")) {
-+                           env.BASTION_IMAGE = readFile "deploy/artifactory/rhel-${REDHAT_RELEASE}-powercloud-latest.txt"
+                            env.BASTION_IMAGE = readFile "deploy/artifactory/rhel-${REDHAT_RELEASE}-powercloud-latest.txt"
                             env.BASTION_IMAGE_NAME = env.BASTION_IMAGE.split()[0].trim()
                             env.BASTION_IMAGE_ID = env.BASTION_IMAGE.split()[1].trim()
                         }
