Enable jenkins pipeline for UI e2e for ocp 4.10
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
+++ b/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
@@ -175,14 +175,20 @@ pipeline {
 			      scp -i id_rsa -o StrictHostKeyChecking=no root@${BASTION_IP}:~/openstack-upi/auth/kubeadmin-password .
 			      kube_password=$(cat kubeadmin-password)
 			      oc_server_url=$(make $TARGET:output TERRAFORM_OUTPUT_VAR=oc_server_url)
-			      cat > input.json << EOF {
+			      cat > input.json << EOF
+			             {
 				     "apiurl": "${oc_server_url}",
 				     "password": "${kube_password}",
 				     "driver": "",
 				     "suite": "e2e",
 				     "browser": "firefox",
 				     "jtimeout": 240000,
-				     "failfast": "no" }
+				     "failfast": "no" 
+				     }
+			      EOF
+			      docker run -it --name UiE2e --net host --shm-size 3g -v $PWD:/host quay.io/miyamoto_h/ocp-console-e2e:${CONSOLE_IMAGE_VERSION} sh -c "cd / && ./console-e2e.sh | tee ui-e2e-output.txt"
+			      docker cp UiE2e:/ui-e2e-output.txt .
+
 			  '''
 		     }
 		     catch(err) {
