Enable jenkins pipeline for UI e2e for ocp 4.10
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
+++ b/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
@@ -186,6 +186,7 @@ pipeline {
 				     "failfast": "no" 
 				     }
 			      EOF
+			      ls -lah
 			      docker run -it --name UiE2e --net host --shm-size 3g -v $PWD:/host quay.io/miyamoto_h/ocp-console-e2e:${CONSOLE_IMAGE_VERSION} sh -c "cd / && ./console-e2e.sh | tee ui-e2e-output.txt"
 			      docker cp UiE2e:/ui-e2e-output.txt .
 
