Enable jenkins pipeline for UI e2e for ocp 4.10
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
+++ b/jobs/pipelines/powervm/ocp/4.10/daily-ocp4.10-powervm-p10-min-ui-e2e/Jenkinsfile
@@ -60,6 +60,7 @@ pipeline {
                 setupCommonEnvironmentVariables()
                 setupClusterConfig("${CONFIG_TYPE}")
 		script{
+		    env.INSTANCE_NAME = "rdr-aish"
 		    env.OS_TENANT_NAME="icp-test"
                     env.OS_NETWORK = "workload"
                     env.OS_PRIVATE_NETWORK = "workload"
