Enable jenkins pipeline for UI e2e for ocp 4.10
Signed-off-by: Aishwarya Kamat <aishwarya.kamat@ibm.com>

--- a/images/jenkins-inbound-agent/Dockerfile
+++ b/images/jenkins-inbound-agent/Dockerfile
@@ -1,4 +1,4 @@
-FROM quay.io/miyamoto_h/ocp-console-e2e:v22.10.12
+FROM jenkins/inbound-agent:4.10-3
 USER root
 RUN  yum install curl gnupg2 --yes \
         python3 \
